<resources>
    <string name="app_name">Chat Application</string>
    <string-array name="spinnerItemsRegisterAcrivity">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="LogOut">Log Out</string>
    <string name="PasswordMust">Password*</string>
    <string name="UsernameMust">Username*</string>
    <string name="EmailMust">Email*</string>
    <string name="Email">Email</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="AccseptNotification">Accept Notification</string>
    <string name="BirthDate">Birth Date</string>
    <string name="MyFriend">My Friend</string>
    <string name="Send">Send</string>
    <string name="MessageText">Message text</string>
    <string name="MyChatList">My chat list</string>
    <string name="NameStevanPopov">Stevan Popov</string>
    <string name="NameMarkoFrancuski">Marko Francuski</string>
    <string name="UsernameAlreadyExists">Username already exists!</string>
    <string name="UsernameDoesntExists">Username does not exists!</string>
    <string name="MySharedPref">MySharedPref</string>
    <string name="Refresh">Refresh</string>
    <string name="MessageSent">Message is sent!</string>
    <string name="YouHaveNewMessage">You have new message</string>

</resources>
