<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="stevan.popov.MessageActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/LogOutButtonMessageActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/LogOut"
            android:layout_marginHorizontal="20px"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom = "true">
        <EditText
            android:id="@+id/MessageEditTextMessageActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/MessageText"/>
        <Button
            android:id="@+id/SendButtonMessageActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Send"
            android:enabled="false"/>
    </LinearLayout>



</RelativeLayout>
